prevent horizontal scroll on carouseö container

--- a/angular-cards/src/app/cards/cards.component.scss
+++ b/angular-cards/src/app/cards/cards.component.scss
@@ -2,3 +2,7 @@
   max-width: 900px;
   padding: 0;
 }
+#carousel-container {
+  width: 100vw;
+  overflow-x: hidden;
+}
